tdf#130155 Writer Navigator crash fix: Check entry to expand has children

Fixes crash/freeze when an entry without children is sent
is to SwContentTree::Expand. It forwards to SvTreeListBox::Expand deal
with it.

Change-Id: Icd3cd1b2d0a949e01a3e02a6fa4cdc08610c8ffb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87307
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>